--- a/style.css
+++ b/style.css
@@ -40,11 +40,34 @@ body{
 .val{
     /* align-self: flex-end; */
     text-align: right;
+    margin-right: 10px;
     padding: 10px;
-    word-wrap: break-word;
+    /* word-wrap: break-word; */
+    white-space: nowrap;
     font-size: 50px;
+    overflow-x: auto;
 }
 
+.val::-webkit-scrollbar{
+    width: 0.1em;
+}
+
+.res{
+    text-align: right;
+    margin-right: 10px;
+    padding: 10px;
+    white-space: nowrap;
+    font-size: 50px;
+    /* overflow-x: auto; */
+}
+.res::-webkit-scrollbar{
+    width: 0.1em;
+}
+@media(max-width:200px){
+    .res{
+        font-size: 30px;
+    }
+}
 .keys{
     display: flex;
     flex-wrap: wrap;
